# shared-core

./: '  .gitignore  .gitmodules  .taplo.toml  .tarpaulin.toml  :w  AGENTS.md  BENCHMARKS.md  Cargo.toml  LOG_UPLOAD_RESUME.MD  Makefile  NOTICE  PLAN.md  README.md  buf.yaml  deny.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml
.config/: hakari.toml  nextest.toml
bd-api/: AGENTS.md  Cargo.toml
bd-api/src/: api.rs  api_test.rs  backoff.rs  lib.rs  network_quality.rs  network_quality_test.rs  opqaue.rs  payload_conversion.rs  reconnect.rs  reconnect_test.rs  upload.rs
bd-artifact-upload/: Cargo.toml
bd-artifact-upload/src/: lib.rs  uploader.rs  uploader_test.rs
bd-backoff/: Cargo.toml
bd-bonjson/: Cargo.toml  build.rs
bd-bonjson-ffi/: Cargo.toml  build.rs
bd-bonjson-ffi/src/: lib.rs
bd-bonjson-tests/: Cargo.toml  build.rs
bd-bonjson-tests/src/: ffi_tests.c  ffi_tests.rs  lib.rs
bd-bonjson/include/bd-bonjson/: ffi.h
bd-bonjson/src/: de.rs  decoder.rs  decoder_test.rs  deserialize_primitives.rs  encoder.rs  encoder_test.rs  error.rs  ffi.rs  lib.rs  primitives.rs  primitives_test.rs  ser.rs  serialize_primitives.rs  type_codes.rs  writer.rs  writer_test.rs
bd-bounded-buffer/: Cargo.toml
bd-bounded-buffer/src/: lib.rs  lib_test.rs  size.rs
bd-buffer/: Cargo.toml
bd-buffer/src/: ffi.rs  lib.rs  ring_buffer.rs  ring_buffer_test.rs
bd-buffer/src/buffer/: aggregate_ring_buffer.rs  aggregate_ring_buffer_test.rs  common_ring_buffer.rs  common_ring_buffer_test.rs  intrusive_queue_with_free_list.rs  mod.rs  non_volatile_ring_buffer.rs  non_volatile_ring_buffer_test.rs  stats_helper.rs  stats_test_helper.rs  volatile_ring_buffer.rs  volatile_ring_buffer_test.rs
bd-buffer/src/buffer/test/: mod.rs  thread_synchronizer.rs
bd-client-common/: AGENTS.md  Cargo.toml
bd-client-common/src/: error.rs  error_test.rs  fb.rs  file.rs  file_system.rs  file_test.rs  filesystem.rs  init_lifecycle.rs  lib.rs  payload_conversion.rs  safe_file_cache.rs  safe_file_cache_test.rs  sdk_status.rs  sdk_status_test.rs  test.rs  zlib.rs
bd-client-regex/: Cargo.toml
bd-client-regex/benches/: regex_comparison.rs
bd-client-regex/src/: lib.rs
bd-client-stats/: Cargo.toml
bd-client-stats-store/: Cargo.toml
bd-client-stats-store/src/: lib.rs  lib_test.rs
bd-client-stats-store/src/test/: mod.rs
bd-client-stats/src/: file_manager.rs  lib.rs  observer.rs  stats.rs  stats_test.rs  test.rs
bd-client-stats/src/test/: mod.rs
bd-completion/: Cargo.toml
bd-crash-handler/: Cargo.toml
bd-crash-handler/src/: cap_file_monitor.rs  config_monitor.rs  config_monitor_test.rs  config_writer.rs  config_writer_test.rs  file_watcher.rs  global_state.rs  global_state_test.rs  json_extractor.rs  json_extractor_test.rs  json_file_monitor.rs  json_file_monitor_test.rs  lib.rs  monitor_test.rs  uploader.rs  uploader_test.rs
bd-device/: Cargo.toml
bd-device/src/: device_test.rs  lib.rs
bd-error-reporter/: Cargo.toml
bd-error-reporter/src/: lib.rs  reporter.rs  reporter_test.rs  test.rs
bd-events/: Cargo.toml
bd-events/src/: lib.rs  listener_test.rs
bd-feature-flags/: Cargo.toml
bd-feature-flags/src/: feature_flags_test.rs  lib.rs  test.rs
bd-filters/: Cargo.toml
bd-filters/src/: lib.rs
bd-grpc/: Cargo.toml  build.rs
bd-grpc-codec/: Cargo.toml
bd-grpc-codec/src/: code.rs  coding_test.rs  lib.rs  stats.rs
bd-grpc/src/: axum_helper.rs  client.rs  compression.rs  connect_protocol.rs  error.rs  grpc_test.rs  lib.rs  service.rs  stats.rs  status.rs  status_test.rs
bd-grpc/src/proto/: test.proto
bd-hyper-network/: Cargo.toml
bd-hyper-network/src/: hyper_test.rs  lib.rs
bd-internal-logging/: Cargo.toml
bd-internal-logging/src/: lib.rs
bd-json-path/: Cargo.toml
bd-json-path/src/: lib.rs  parser.rs  parser_test.rs
bd-key-value/: Cargo.toml
bd-key-value/src/: lib.rs  resilient_kv.rs  resilient_kv_test.rs  store_test.rs
bd-log/: Cargo.toml
bd-log-filter/: Cargo.toml
bd-log-filter/src/: filter_chain_test.rs  lib.rs
bd-log-matcher/: Cargo.toml
bd-log-matcher/src/: builder.rs  legacy_matcher_test.rs  lib.rs  matcher.rs  matcher_test.rs  state_value_matcher.rs  state_value_matcher_test.rs  test.rs  value_matcher.rs  version.rs  version_test.rs
bd-log-metadata/: Cargo.toml
bd-log-metadata/src/: lib.rs
bd-log-primitives/: Cargo.toml
bd-log-primitives/src/: lib.rs  lib_test.rs  owned.rs  size.rs  tiny_set.rs
bd-log-primitives/src/tiny_set/: proto.rs
bd-log/src/: lib.rs  lib_test.rs  otel.rs  otel_test.rs  rate_limit_log.rs  rate_limit_log_test.rs  test.rs
bd-logger/: AGENTS.md  Cargo.toml
bd-logger/src/: app_version.rs  app_version_test.rs  async_log_buffer.rs  async_log_buffer.rs.orig  async_log_buffer.rs.rej  async_log_buffer_test.rs  battery.rs  battery_test.rs  buffer_selector.rs  builder.rs  builder_test.rs  client_config.rs  client_config_test.rs  consumer.rs  consumer_test.rs  device_id.rs  directory_lock.rs  directory_lock_test.rs  flush_registry.rs  flush_registry_test.rs  global_state.rs  global_state_test.rs  internal.rs  internal_report.rs  lib.rs  log_replay.rs  logger.rs  logger_replay.rs  logger_test.rs  logging_state.rs  memory_bound.rs  metadata.rs  metadata_test.rs  network.rs  network_test.rs  ordered_receiver.rs  ordered_receiver_test.rs  pre_config_buffer.rs  pre_config_buffer_test.rs  ratelimit.rs  (+9 more)
bd-logger/src/async_log_buffer/: feature_flags.rs
bd-logger/src/bounded_buffer/: mod.rs  size.rs
bd-logger/src/test/: crash_handler_integration.rs  directory_lock_integration.rs  embedded_logger_integration.rs  logger_integration.rs  mod.rs  setup.rs  state_upload_integration.rs
bd-logger/tests/: embedded_logger_integration.rs  logger_integration.rs
bd-macros/: Cargo.toml
bd-matcher/: Cargo.toml
bd-metadata/: Cargo.toml
bd-network-quality/: Cargo.toml
bd-noop-network/: Cargo.toml
bd-panic/: Cargo.toml
bd-pgv/: Cargo.toml  build.rs
bd-profile/: Cargo.toml
bd-proto/: Cargo.toml  README.md  build.rs
bd-proto-util/: Cargo.toml  build.rs
bd-report-convert/: Cargo.toml  build.rs
ci/: setup.sh  (+1 more)
(+539 files in other folders)
