[workspace]
members = [
  "profiling",
  "bd-backoff",
  "bd-api",
  "bd-artifact-upload",
  "bd-bonjson",
  "bd-bonjson-ffi",
  "bd-bonjson-tests",
  "bd-bounded-buffer",
  "bd-buffer",
  "bd-client-common",
  "bd-client-stats",
  "bd-client-stats-store",
  "bd-completion",
  "bd-crash-handler",
  "bd-device",
  "bd-error-reporter",
  "bd-events",
  "bd-state",
  "bd-grpc",
  "bd-grpc-codec",
  "bd-hyper-network",
  "bd-metadata",
  "bd-logger",
  "bd-log-filter",
  "bd-log-matcher",
  "bd-macros",
  "bd-internal-logging",
  "bd-network-quality",
  "bd-noop-network",
  "bd-panic",
  "bd-pgv",
  "bd-profile",
  "bd-proto",
  "bd-proto-util",
  "bd-report-convert",
  "bd-report-parsers",
  "bd-report-writer",
  "bd-report-writer-tests",
  "bd-resilient-kv",
  "bd-session",
  "bd-key-value",
  "bd-session-replay",
  "bd-resource-utilization",
  "bd-rt",
  "bd-runtime",
  "bd-runtime-config",
  "bd-server-stats",
  "bd-stats-common",
  "bd-test-helpers",
  "bd-time",
  "bd-workflows",
  "bd-workspace-hack",
  "fuzz",
  "logger-cli",
]
resolver = "2"

[workspace.dependencies]
android_logger    = "0.15.1"
anyhow            = "1.0.102"
arbitrary         = { version = "1.4.2", features = ["derive"] }
arc-swap          = "1.9.1"
assert_matches    = "1.5.0"
assert_no_alloc   = "1.1.2"
async-compression = { version = "0.4.42", features = ["tokio", "zlib"] }
async-trait       = "0.1.89"
axum              = { version = "0.8.9", features = ["http2", "macros"] }
base64            = "0.22.1"
base64-url        = "3.0.3"
base64ct          = { version = "1.8.3", features = ["alloc", "std"] }
bd-workspace-hack = "0.1.0"
num-traits        = "0.2.19"

# This project is abandoned and needs to be replaced so is pinned for now. The maintainers just
# deleted all the code in a 3.0 version.
bincode = { version = "=2.0.1", features = ["serde"] }

bindgen         = "0.72.1"
bytes           = "1.11.1"
cbindgen        = "0.29.2"
cc              = "1.2.61"
clap            = { version = "4.6.1", features = ["derive", "env"] }
cmake           = "0.1.58"
color-backtrace = "0.7.2"
concat-string   = "1.0.1"
crc32fast       = "1.5.0"
ctor            = "0.12.0"
dashmap         = "6.1.0"

# Pinned due to https://github.com/google/flatbuffers/issues/8876
flatbuffers = "=25.9.23"

ahash                 = { version = "0.8.12", features = ["serde"] }
flatc-rust            = "0.2.0"
flate2                = { version = "1.1.9", default-features = false }
fs2                   = "0.4.3"
futures               = "0.3.32"
futures-core          = "0.3.32"
futures-util          = "0.3.32"
http                  = "1.4.0"
http-body             = "1.0.1"
http-body-util        = "0.1.3"
hyper                 = "1.9.0"
hyper-rustls          = { version = "0.27.9", default-features = false }
hyper-util            = { version = "0.1.20", features = ["client", "client-legacy"] }
insta                 = "1.47.2"
intrusive-collections = "0.10.0"
itertools             = "0.14.0"
jni                   = "0.22.4"
libc                  = "0.2.186"
libfuzzer-sys         = "0.4.12"
log                   = "0.4.29"
matches               = "0.1.10"
memmap2               = "0.9.10"
mockall               = "0.14.0"
nom                   = "8.0.0"
nom-language          = "0.1.0"
notify                = "8.2.0"
opentelemetry         = "0.31.0"

opentelemetry-otlp = { version = "0.31.1", default-features = false, features = [
  "trace",
  "http-proto",
  "reqwest-client",
  "grpc-tonic",
] }

opentelemetry_sdk = { version = "0.31.0", features = [
  "trace",
  "rt-tokio",
  "rt-tokio-current-thread",
  "experimental_trace_batch_span_processor_with_async_runtime",
] }

ordered-float      = { version = "5.3.0", features = ["serde"] }
parameterized      = "2.1.0"
parking_lot        = "0.12.5"
pretty_assertions  = "1.4.1"
prometheus         = "0.14.0"
rmcp               = { version = "1.5.0", features = ["transport-io"] }
thread_local       = "1.1"
tracing            = "0.1.44"
tracing-log        = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir            = "2.5.0"

protobuf = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack", features = [
  "bytes",
  "with-bytes",
] }
protobuf-codegen = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack" }
protobuf-json-mapping = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack" }

rand         = "0.10.1"
regex        = "1.12.3"
reqwest      = { version = "0.13.3", features = ["deflate", "json"] }
rstest       = "0.26.1"
rstest_reuse = "0.7.0"
serde        = { version = "1", features = ["derive", "rc"] }
serde_json   = "1.0.149"
serde_yaml   = "0.9.34"
sha2         = "0.11.0"

sketches-rust = { git = "https://github.com/mattklein123/sketches-rust.git", branch = "patch-stack2" }

snap                  = "1.1.1"
sqlite                = "0.37.0"
static_assertions     = "1.1.0"
strum                 = { version = "0.28", features = ["derive"] }
tarpc                 = { version = "0.37.0", features = ["full"] }
tempfile              = "3.27.0"
termcolor             = "1.4.1"
thiserror             = "2.0.18"
tikv-jemalloc-ctl     = "0.6.1"
time                  = { version = "0.3.47", features = ["serde-well-known", "macros", "parsing"] }
tokio                 = { version = "1.52.1", features = ["full", "test-util"] }
tokio-rustls          = { version = "0.26.4", default-features = false }
tokio-stream          = "0.1.18"
tokio-test            = "0.4.5"
tower                 = { version = "0.5.3", features = ["retry", "util"] }
tower-http            = { version = "0.6.8", features = ["compression-deflate"] }
tracing-opentelemetry = "0.32.1"
unwrap-infallible     = "1.0.0"
urlencoding           = "2.1.3"
uuid                  = { version = "1.23.1", features = ["v4"] }

[profile.bench]
debug = true

[patch.crates-io.bd-workspace-hack]
path = "bd-workspace-hack"
