[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-bonjson-tests"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
bd-bonjson.path             = "../bd-bonjson"
bd-workspace-hack.workspace = true
libc.workspace              = true

[dev-dependencies]
assert_no_alloc.workspace = true
bd-test-helpers.path      = "../bd-test-helpers"
tempfile.workspace        = true

[build-dependencies]
bd-bonjson.path = "../bd-bonjson"
cc.workspace    = true
