[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-bounded-buffer"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
bd-client-stats-store.path = "../bd-client-stats-store"
bd-stats-common.path       = "../bd-stats-common"
log.workspace              = true
tokio.workspace            = true
ahash.workspace            = true
thiserror.workspace            = true

[dev-dependencies]
ctor.workspace = true
tokio-test.workspace = true
