[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-bounded-buffer"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
ahash.workspace            = true
bd-client-stats-store.path = "../bd-client-stats-store"
bd-log-primitives.path     = "../bd-log-primitives"
bd-stats-common.path       = "../bd-stats-common"
log.workspace              = true
thiserror.workspace        = true
tokio.workspace            = true

[dev-dependencies]
ctor.workspace       = true
tokio-test.workspace = true
