[package]
edition      = "2021"
license-file = "../LICENSE"
name         = "bd-client-common"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace           = true
async-trait.workspace      = true
bd-client-stats-store.path = "../bd-client-stats-store"
bd-log-primitives.path     = "../bd-log-primitives"
bd-matcher.path            = "../bd-matcher"
bd-metadata.path           = "../bd-metadata"
bd-proto.path              = "../bd-proto"
flatbuffers.workspace      = true
flate2                     = { workspace = true, default-features = false, features = ["zlib"] }
log.workspace              = true
parking_lot.workspace      = true
protobuf.workspace         = true
thiserror.workspace        = true
time.workspace             = true
tokio.workspace            = true
uuid.workspace             = true
