[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-client-common"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace           = true
async-compression          = { version = "0.4.27", features = ["zlib"], default-features = false }
async-trait.workspace      = true
bd-client-stats-store.path = "../bd-client-stats-store"
bd-log-primitives.path     = "../bd-log-primitives"
bd-metadata.path           = "../bd-metadata"
bd-proto.path              = "../bd-proto"
crc32fast.workspace        = true
flatbuffers.workspace      = true
flate2                     = { workspace = true, default-features = false, features = ["zlib"] }
log.workspace              = true
mockall.workspace          = true
parking_lot.workspace      = true
protobuf.workspace         = true
tempfile.workspace         = true
thiserror.workspace        = true
time.workspace             = true
tokio.workspace            = true
walkdir = "2.5.0"

[dev-dependencies]
uuid.workspace = true
