[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-client-common"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace       = true
async-trait.workspace  = true
bd-log-primitives.path = "../bd-log-primitives"
bd-metadata.path       = "../bd-metadata"
bd-proto.path          = "../bd-proto"
crc32fast.workspace    = true
flatbuffers.workspace  = true
flate2                 = { workspace = true, default-features = false, features = ["zlib"] }
itertools.workspace    = true
log.workspace          = true
mockall.workspace      = true
parking_lot.workspace  = true
protobuf.workspace     = true
tempfile.workspace     = true
thiserror.workspace    = true
time.workspace         = true
tokio.workspace        = true
walkdir.workspace      = true

[dev-dependencies]
bd-test-helpers.path = "../bd-test-helpers"
ctor.workspace       = true
tempfile.workspace   = true
uuid.workspace       = true
