[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-client-regex"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
bd-workspace-hack.workspace = true
regex                       = { version = "1.12.3", default-features = false, features = ["std"] }
