[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-client-regex"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
bd-workspace-hack.workspace = true
regex-lite                  = "0.1.6"

[dev-dependencies]
criterion.workspace = true
regex               = "1.12.3"

[[bench]]
harness = false
name    = "regex_comparison"
