[package]
edition      = "2021"
license-file = "../LICENSE"
name         = "bd-client-stats-store"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
bd-proto                = { path = "../bd-proto" }
bd-stats-common         = { path = "../bd-stats-common" }
bd-time                 = { path = "../bd-time" }
log.workspace           = true
parking_lot.workspace   = true
sketches-rust.workspace = true
thiserror.workspace     = true
tokio                   = { workspace = true, features = ["sync"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
bd-test-helpers.path = "../bd-test-helpers"
ctor.workspace       = true
