[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-client-stats-store"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace            = true
bd-client-common            = { path = "../bd-client-common" }
bd-proto                    = { path = "../bd-proto" }
bd-stats-common             = { path = "../bd-stats-common" }
bd-workspace-hack.workspace = true
log.workspace               = true
parking_lot.workspace       = true
sketches-rust.workspace     = true
thiserror.workspace         = true
tokio.workspace             = true
async-trait.workspace       = true

[dev-dependencies]
bd-test-helpers.path = "../bd-test-helpers"
ctor.workspace       = true
