[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-crash-handler"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace            = true
async-trait.workspace       = true
bd-api.path                 = "../bd-api"
bd-artifact-upload.path     = "../bd-artifact-upload"
bd-client-common.path       = "../bd-client-common"
bd-device.path              = "../bd-device"
bd-error-reporter.path      = "../bd-error-reporter"
bd-key-value.path           = "../bd-key-value"
bd-log-primitives.path      = "../bd-log-primitives"
bd-proto.path               = "../bd-proto"
bd-resilient-kv.path        = "../bd-resilient-kv"
bd-runtime.path             = "../bd-runtime"
bd-session.path             = "../bd-session"
bd-shutdown.path            = "../bd-shutdown"
bd-state.path               = "../bd-state"
bd-time.path                = "../bd-time"
bd-workspace-hack.workspace = true
flatbuffers.workspace       = true
itertools.workspace         = true
log.workspace               = true
memmap2.workspace           = true
mockall.workspace           = true
notify.workspace            = true
regex.workspace             = true
serde.workspace             = true
thiserror.workspace         = true
time.workspace              = true
tokio.workspace             = true
uuid.workspace              = true

[dev-dependencies]
assert_matches.workspace = true
bd-proto-util.path       = "../bd-proto-util"
bd-test-helpers          = { path = "../bd-test-helpers", default-features = false }
ctor.workspace           = true
futures-util.workspace   = true
tempfile.workspace       = true
