[package]
edition      = "2024"
license-file = "../LICENSE"
name         = "bd-device"
publish      = false
version      = "1.0.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace            = true
bd-key-value.path           = "../bd-key-value"
bd-workspace-hack.workspace = true
log.workspace               = true
parking_lot.workspace       = true
serde.workspace             = true
time.workspace              = true
uuid.workspace              = true

[dev-dependencies]
bd-test-helpers             = { path = "../bd-test-helpers", default-features = false }
ctor.workspace              = true
pretty_assertions.workspace = true
