[package]
edition      = "2021"
license-file = "../LICENSE"
name         = "bd-events"
publish      = false
version      = "1.0.0"

[dependencies]
bd-runtime.path  = "../bd-runtime"
bd-shutdown.path = "../bd-shutdown"
ctor.workspace   = true
log.workspace    = true
tokio.workspace  = true

[dev-dependencies]
bd-test-helpers.path        = "../bd-test-helpers"
bd-time.path                = "../bd-time"
parking_lot.workspace       = true
tempfile.workspace          = true
time.workspace              = true
tokio-test.workspace        = true
